tests/baselines/reference/additionOperatorWithNullValueAndInvalidOperator.errors.txt
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(11,10): error TS2365: Operator '+' cannot be applied to types '空值' and '真假'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(12,10): error TS2365: Operator '+' cannot be applied to types '空值' and 'Object'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(13,10): error TS2365: Operator '+' cannot be applied to types '空值' and '无值'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(14,10): error TS2365: Operator '+' cannot be applied to types '真假' and '空值'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(15,10): error TS2365: Operator '+' cannot be applied to types 'Object' and '空值'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(16,10): error TS2365: Operator '+' cannot be applied to types '空值' and '无值'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(19,10): error TS2365: Operator '+' cannot be applied to types '空值' and 'Number'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(20,10): error TS2365: Operator '+' cannot be applied to types '空值' and '为真'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(21,10): error TS2365: Operator '+' cannot be applied to types '空值' and '{ a: 文字; }'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(22,11): error TS2365: Operator '+' cannot be applied to types '空值' and '无值'.
tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts(23,11): error TS2365: Operator '+' cannot be applied to types '空值' and '() => 无值'.


==== tests/cases/conformance/expressions/binaryOperators/additionOperator/additionOperatorWithNullValueAndInvalidOperator.ts (11 errors) ====
    // If one operand is the null or undefined value, it is treated as having the type of the other operand.
    
    function foo(): void { return undefined }
    
    var a: boolean;
    var b: Object;
    var c: void;
    var d: Number;
    
    // null + boolean/Object
    var r1 = null + a;
             ~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '真假'.
    var r2 = null + b;
             ~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and 'Object'.
    var r3 = null + c;
             ~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '无值'.
    var r4 = a + null;
             ~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '真假' and '空值'.
    var r5 = b + null;
             ~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types 'Object' and '空值'.
    var r6 = null + c;
             ~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '无值'.
    
    // other cases
    var r7 = null + d;
             ~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and 'Number'.
    var r8 = null + true;
             ~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '为真'.
    var r9 = null + { a: '' };
             ~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '{ a: 文字; }'.
    var r10 = null + foo();
              ~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '无值'.
    var r11 = null + (() => { });
              ~~~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '+' cannot be applied to types '空值' and '() => 无值'.